--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="camera.ico"/>
-  <script type="text/javascript" src="css-js/style.js"></script>
-	<link rel="stylesheet" type="text/css" href="css-js/style.css"></link>
+  <link rel="shortcut icon" href="picture/camera.ico"/>
+  <script type="text/javascript" src="js/popupProduct.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css"></link>
   <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
