--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript">
+<!--   <script type="text/javascript">
     $(document).ready(function(){
 // All Elements Hiding
     $('#bottom-nav, #intro, #home, #about, #shop, #logo, #logoPage, #tips').hide();
@@ -87,10 +87,10 @@
             }
         }});
 });
-  </script>
+  </script> -->
 	<title>Secondhand Camera</title>
 </head>
-<body>
+<body onload="mainWebsite();">
   <!-- Loading Page -->
     <div id="progress_loading">
       <h2 id="word_loading">LOADING ...</h2>
